Update GitHub pages

--- a/guide/introduction.html
+++ b/guide/introduction.html
@@ -30,6 +30,9 @@ function addJsClass() {
                     <div class="toc-item" style="margin-left:0"><a href="../guide/usage.html"><strong>2</strong><span>Usage</span></a>
                     </div>
                     
+                    <div class="toc-item" style="margin-left:0"><a href="../guide/example.html"><strong>3</strong><span>Example Scenario</span></a>
+                    </div>
+                    
                 </div>
             </div>
         </li>
@@ -86,9 +89,8 @@ function addJsClass() {
 
 <h1 id="introduction">1 Introduction</h1>
 The Page Resources plugin provides the <a href="http://grails.org/plugin/resources" target="blank">Grails Resources plugin</a> with the ability to
-use convention over configuration to define "page modules", which allow having page-specific
-JavaScript/CSS/LESS resources.  This can drastically cut down on the number of resource modules that need to be
-configured explicitly.
+use convention over configuration to define "page modules", which allow having page-specific resources (JavaScript, CSS,
+LESS, etc.).  This can drastically cut down on the number of resource modules that need to be configured explicitly.
 
 
 
