--- a/guide/pages/releaseNotes.html
+++ b/guide/pages/releaseNotes.html
@@ -30,6 +30,9 @@ function addJsClass() {
                     <div class="toc-item" style="margin-left:0"><a href="../../guide/usage.html"><strong>2</strong><span>Usage</span></a>
                     </div>
                     
+                    <div class="toc-item" style="margin-left:0"><a href="../../guide/example.html"><strong>3</strong><span>Example Scenario</span></a>
+                    </div>
+                    
                 </div>
             </div>
         </li>
