--- a/gapi/DefaultPackage/package-frame.html
+++ b/gapi/DefaultPackage/package-frame.html
@@ -23,7 +23,7 @@ DefaultPackage
 <TR>
 <TD NOWRAP><FONT size="+1" CLASS="FrameHeadingFont">
 Classes</FONT>&nbsp;
-<FONT CLASS="FrameItemFont"><BR><A HREF="PageResourcesGrailsPlugin.html" title="class in DefaultPackage" target="classFrame">PageResourcesGrailsPlugin</A><BR><A HREF="UrlMappings.html" title="class in DefaultPackage" target="classFrame">UrlMappings</A></FONT></TD>
+<FONT CLASS="FrameItemFont"><BR><A HREF="PageResourcesGrailsPlugin.html" title="class in DefaultPackage" target="classFrame">PageResourcesGrailsPlugin</A></FONT></TD>
 </TR>
 </TABLE>
 
