Update GitHub pages for release 0.1

--- a/gapi/index-all.html
+++ b/gapi/index-all.html
@@ -229,6 +229,8 @@ function windowTitle()
 
 <dl>
 
+<dt><a href="DefaultPackage/PageResourcesGrailsPlugin.html#issueManagement" title="Property in PageResourcesGrailsPlugin"><b>issueManagement</b></a> - Property in <a href="DefaultPackage/PageResourcesGrailsPlugin.html">PageResourcesGrailsPlugin</a>
+</dt><dd></dd>
 </dl>
 
     
