--- a/guide/pages/releaseNotes.html
+++ b/guide/pages/releaseNotes.html
@@ -2,7 +2,7 @@
                       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-    <title>1.1 Release Notes 0.1-SNAPSHOT</title>
+    <title>1.1 Release Notes 0.1</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen, print" title="Style" charset="utf-8"/>
     <link rel="stylesheet" href="../css/pdf.css" type="text/css" media="print" title="PDF" charset="utf-8"/>
@@ -70,7 +70,7 @@ function addJsClass() {
 
                     <p><strong>Authors:</strong> David M. Carr</p>
 
-                    <p><strong>Version:</strong> 0.1-SNAPSHOT</p>
+                    <p><strong>Version:</strong> 0.1</p>
 
                     
                 </div>
@@ -80,7 +80,7 @@ function addJsClass() {
                 
 
 <h2 id="releaseNotes">1.1 Release Notes</h2>
-Below is the history of Page Resource plugin releases.<p class="paragraph"/><h4>0.1 (Release TBD)</h4>
+Below is the history of Page Resource plugin releases.<p class="paragraph"/><h4>0.1 (Released 7-17-2012)</h4>
 <ul class="star">
 <li>Initial release</li>
 </ul><p class="paragraph"/>
