--- a/guide/introduction.html
+++ b/guide/introduction.html
@@ -2,7 +2,7 @@
                       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-    <title>1 Introduction 0.1.1</title>
+    <title>1 Introduction 0.1.2</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen, print" title="Style" charset="utf-8"/>
     <link rel="stylesheet" href="../css/pdf.css" type="text/css" media="print" title="PDF" charset="utf-8"/>
@@ -70,7 +70,7 @@ function addJsClass() {
 
                     <p><strong>Authors:</strong> David M. Carr</p>
 
-                    <p><strong>Version:</strong> 0.1.1</p>
+                    <p><strong>Version:</strong> 0.1.2</p>
 
                     
                 </div>
@@ -95,7 +95,11 @@ LESS, etc.).  This can drastically cut down on the number of resource modules th
 
 
 <h2 id="releaseNotes">1.1 Release Notes</h2>
-Below is the history of Page Resource plugin releases.<p class="paragraph"/><h4>0.1.1 (Released 7-18-2012)</h4>
+Below is the history of Page Resource plugin releases.<p class="paragraph"/><h4>0.1.2 (Release 7-31-2012)</h4>
+<ul class="star">
+<li>Fixed IllegalArgumentException on unsupported files in pages directory ( <a href="https://github.com/davidmc24/grails-page-resources/issues/2" target="blank">Issue #2</a> )</li>
+<li>Fixed loading of new page resource files ( <a href="https://github.com/davidmc24/grails-page-resources/issues/4" target="blank">Issue #4</a> )</li>
+</ul><p class="paragraph"/><h4>0.1.1 (Released 7-18-2012)</h4>
 <ul class="star">
 <li>Fixed IllegalArgumentException on Windows ( <a href="https://github.com/davidmc24/grails-page-resources/issues/1" target="blank">Issue #1</a> )</li>
 </ul><p class="paragraph"/><h4>0.1 (Released 7-17-2012)</h4>
